--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,6 +2,13 @@
   display: flex;
   align-items: center;
   padding: 32px 0 28px;
+  justify-content: space-between;
+}
+
+.header__container {
+  display: flex;
+  align-items: center;
+  gap: 16px;
 }
 
 .header__logo {
@@ -10,20 +17,22 @@
 
 .header__date-and-location {
   margin: 0;
-  font-family: "Cabinet Grotesk";
+  font-family: "Cabinet Grotesk", sans-serif;
   font-weight: 700;
+  font-style: Bold;
   font-size: 20px;
   line-height: 24px;
+  letter-spacing: 0%;
 }
 
-.header__add-clothes-btn {
-  margin: 0 20px 0 auto;
-  padding: 0;
-  font-family: "Cabinet Grotesk";
-  font-weight: 700;
+.header__add-cloths-btn {
+  margin: 0;
+  font-family: "Cabinet Grotesk", sans-serif;
+  border: none;
   font-size: 20px;
   line-height: 24px;
-  border: none;
+  background-color: transparent;
+  cursor: pointer;
 }
 
 .header__user-container {
@@ -34,13 +43,15 @@
 
 .header__username {
   margin: 0;
-  font-family: "Cabinet Grotesk";
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 24px;
+  font-family: "Cabinet Grotesk", sans-serif;
 }
 
-.header__avatar {
-  border: solid 1px rgba(0, 0, 0, 0.5);
-  border-radius: 50%;
+.header__link {
+  display: flex;
+  text-decoration: none;
+  background: none;
+  padding: 0;
+  border: 0;
+  cursor: pointer;
+  color: inherit;
 }
